Supporting mongo 60 and lastest driver version.